# scalable-ccd

./: CMakeLists.txt
.github/workflows/: continuous.yml
cmake/recipes/: metal_cpp.cmake
src/scalable_ccd/cuda/: ccd.cu  ipc_ccd_strategy.hpp  scalar.cuh
src/scalable_ccd/cuda/utils/: device_matrix.cuh
src/scalable_ccd/metal/: CMakeLists.txt  add.metal
